# vita

./: .appveyor.yml  .gitignore  .hgtags  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NEWS.md  README  README.md  bitbucket-pipelines.yml  clean_repository  copyright  lgtm.yml
contributors/: CLA.md  CONTRIBUTORS
docs/: Home.rest
examples/: example1.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  example7.cc  example8.cc  example9a.cc  titanic_train.csv
kernel/: adf.cc  adf.h  adf_inl.h  alps.cc  alps.h  analyzer.cc  analyzer.h  analyzer.tcc  analyzer_inl.h  any.cc  any.h  any.tcc  any_inl.h  argument.cc  argument.h  category_set.cc  category_set.h  classifier.h  compatibility_patch.h  constrained_evaluator.h  constrained_evaluator_inl.h  core_interpreter.h  covariance.h  data.cc  data.h  distribution.cc  distribution.h  distribution_inl.h  environment.cc  environment.h  evaluator.cc  evaluator.h  evaluator_inl.h  evaluator_proxy.cc  evaluator_proxy.h  evaluator_proxy.tcc  evaluator_proxy_inl.h  evolution.cc  evolution.h  evolution_inl.h  (+86 more)
misc/: gitmessage  vita-style.el
python/: vita_sr_gui.ui
sr/: command_line_interpreter.h  comparesr.py  csv2xrff.py  plot.py  preprocess.py  sr.cc  sr.py  sr_gui.py  testsr.py  vita_sr_gui.py
src/: AUTHORS  CMakeLists.txt  CMakePresets.json  Makefile  README  copyright  setversion.py
src/examples/: 8queens.cc  CMakeLists.txt  example1.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  example7.cc  example8.cc  forex.cc  nonogram01.cc  nonogram02.cc  path_finding.cc  path_finding02.cc  pathfinding01.cc  pathfinding02.cc  polyomino00.cc  polyomino01.cc  polyomino02.cc  rastrigin.cc  rubik.cc  scheduling.cc  string_guess.cc  sudoku.cc  symbolic_regression.cc  symbolic_regression.py  symbolic_regression01.cc  symbolic_regression02.cc  symbolic_regression02.py  symbolic_regression03.cc  symbolic_regression04.cc  symbolic_regression05.cc  titanic01.cc  titanic02.cc  titanic03.cc  titanic04.cc  titanic_train.csv
src/examples/forex/: driver.py  forex.cc  forex.xml  gpea.ini  template.mq5  template1.mq5  trade_simulator.cc  trade_simulator.h  trading_data.cc  trading_data.h  vboxdriver.py
src/examples/forex_files/: template1.mq4  trade_simulator.cc  trade_simulator.h  trading_data.cc  trading_data.h
src/examples/gp_pathfinder/: CMakeLists.txt  README  gp_pathfinder.cc  map1.txt  map2.txt
src/examples/sr/: CMakeLists.txt  command_line_interpreter.h  comparesr.py  csv2xrff.py  preprocess.py  sr.cc  testsr.py
src/kernel/: CMakeLists.txt  adf.cc  adf.h  adf.tcc  alps.cc  alps.h  analyzer.h  analyzer.tcc  any.cc  any.h  any.tcc  argument.cc  argument.h  cache.cc  cache.h  cache_hash.cc  cache_hash.h  category_set.cc  category_set.h  common.h  compatibility_patch.h  constrained_evaluator.h  constrained_evaluator.tcc  core_interpreter.h  data.cc  data.h  distribution.h  distribution.tcc  environment.cc  environment.h  evaluator.h  evaluator.tcc  evaluator_proxy.h  evaluator_proxy.tcc  evolution.h  evolution.tcc  evolution_recombination.h  evolution_recombination.tcc  evolution_replacement.h  evolution_replacement.tcc  (+65 more)
src/kernel/detail/: any.h  lambda_f.h
src/kernel/ga/: evaluator.h  evaluator.tcc  ga_evaluator.h  ga_search.h  ga_search.tcc  i_de.cc  i_de.h  i_ga.cc  i_ga.h  i_ga_iterator.tcc  interpreter.cc  interpreter.h  primitive.h  problem.cc  problem.h  search.h  search.tcc
src/kernel/gp/: adf.cc  adf.h  argument.cc  argument.h  function.cc  function.h  gene.h  gene.tcc  interpreter.h  interpreter.tcc  locus.h  symbol.cc  symbol.h  team.h  team.tcc  terminal.cc  terminal.h
src/kernel/gp/detail/: lambda_f.h
src/kernel/gp/mep/: i_mep.cc  i_mep.h  i_mep_iterator.tcc  interpreter.cc  interpreter.h  interpreter.tcc
src/kernel/gp/src/: category_set.cc  category_set.h  constant.h  dataframe.cc  dataframe.h  dss.cc  dss.h  evaluator.h  evaluator.tcc  holdout_validation.cc  holdout_validation.h  interpreter.h  interpreter.tcc  lambda_f.cc  lambda_f.h  lambda_f.tcc  model_metric.cc  model_metric.h  problem.cc  problem.h  search.h  search.tcc  variable.h
src/kernel/gp/src/primitive/: bool.h  comp_penalty.h  factory.cc  factory.h  int.h  real.h  string.h
src/kernel/src/: category_set.cc  category_set.h  constant.h  data.cc  data.h  dataframe.cc  dataframe.h  dss.cc  dss.h  evaluator.h  evaluator.tcc  holdout_validation.cc  holdout_validation.h  interpreter.h  interpreter.tcc  interpreter_inl.h  model_metric.cc  model_metric.h  model_metric.tcc  problem.cc  problem.h  search.h  search.tcc  variable.h
src/kernel/src/detail/: evaluator.h
src/kernel/src/primitive/: bool.h  comp_penalty.h  double.h  factory.cc  factory.h  int.h  real.h  string.h
src/kernel/staging/: small_vector.h  small_vector.tcc  variant.h  variant.tcc
src/sr/: CMakeLists.txt  command_line_interpreter.h  preprocess.py  sr.cc  testsr.py
src/test/: CMakeLists.txt  any.cc  cache.cc  category_set.cc  csv_parser.cc  dataframe.cc  de.cc  discretization.cc  evolution.cc  evolution_selection.cc  factory_fixture1.h  factory_fixture2.h  factory_fixture3.h  factory_fixture4.h  factory_fixture5.h  facultative.cc  fitness.cc  fixture1.h  fixture2.h  fixture3.h  fixture4.h  fixture5.h  fixture6.h  ga.cc  ga_perf.cc  holdout_validation.cc  i_de.cc  i_ga.cc  i_mep.cc  iris.csv  lambda.cc  matrix.cc  population.cc  population_coord.cc  primitive_d.cc  primitive_i.cc  saturation.cc  small_vector.cc  speed_de.cc  speed_ga.cc  (+27 more)
src/test/test_resources/: src_problem.xml  src_problem.xrff
src/tools/: enforce-message.py
src/utility/: any.cc  any.h  any.tcc  contracts.h  covariance.h  csv_parser.cc  csv_parser.h  discretization.h  facultative.h  matrix.h  matrix.tcc  pocket_csv.h  saturation.h  small_vector.h  small_vector.tcc  timer.h  utility.cc  utility.h  xoroshiro128p.cc  xoroshiro128p.h  xoshiro256ss.cc  xoshiro256ss.h
test/: factory_fixture1.h  factory_fixture2.h  factory_fixture3.h  factory_fixture4.h  factory_fixture5.h  ionosphere.csv  mep.csv  test.cc  test1.cc  test2.cc  test3.cc  (+25 more)
(+81 files in other folders)
